# eso-addons-manager

./: .gitignore  README.md  app.py  app.spec  backend.py  build.cmd  build.sh  compile_translations.cmd  compile_translations.sh  func.py  pyproject.toml  requirements.txt  rsync.py
.github/workflows/: build.yml
qml/: AddonsTab.qml  ExclusionsTab.qml  InstalledTab.qml  LibrariesTab.qml  LogTab.qml  main.qml
translations/: app_de.ts  app_es.ts  app_fr.ts  app_ru.ts  app_uk.ts
