[project]
name = 'eso-addons-manager'
version = '0.1.0'
description = 'Addon manager for The Elder Scrolls Online'
readme = 'README.md'
license = { text = 'MIT' }
authors = [{ name = 'powerbq' }]
requires-python = '>=3.10'

# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 120

# https://docs.astral.sh/ruff/configuration/
[tool.ruff.format]
skip-magic-trailing-comma = false
line-ending = "lf"
quote-style = "single"

[tool.ruff.lint]
select = ["F401"]

# https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
profile = "google"
force_single_line = true
